contrast fixes

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,12 @@ h1, h2, h3, h4, h5,
     margin-bottom: 10px; }
   .site-footer .footer-heading {
     font-size: 16px;
-    color: #818186 !important; }
+      background: -webkit-gradient(linear, left top, right top, from(#c70039), color-stop(70%, #ff5733));
+      background: -webkit-linear-gradient(left, #c70039, #ff5733 70%);
+      background: -o-linear-gradient(left, #c70039, #ff5733 70%);
+      background: linear-gradient(to right, #c70039, #ff5733 70%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent; }
 
 .bg-text-line {
   display: inline;
